--- a/demo/Makefile
+++ b/demo/Makefile
@@ -11,6 +11,9 @@ mgpucontext.o: ../src/mgpucontext.cu
 mgpuutil.o: ../src/mgpuutil.cpp
 	nvcc $(NVCCFLAGS) -o $@ -c $<
 
+demo.o: demo.cu
+        nvcc $(NVCCFLAGS) -o $@ -c $<
+
 demo: demo.o mgpucontext.o mgpuutil.o
 	nvcc $(NVCCFLAGS) -o $@ $+
 
