--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
+# Ignore vscode
+*.vscode*
+
+# Ignore vim undo file
+*.un~
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+# Ignore tarball
+*.tar.gz
+
+# Ignore bin directory
+bin/
+
+# Ignore vim temp files
+*.sw~
+
 # Ignore build directory
 build
