--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -23,10 +23,10 @@ jobs:
     steps:
       # Fetch CUDA toolkit using Jimver/cuda-toolkit@v0.2.5
       - name: Fetch CUDA toolkit
-        uses: Jimver/cuda-toolkit@v0.2.5
+        uses: Jimver/cuda-toolkit@master
         id: cuda-toolkit
         with:
-          cuda: '11.5.1'
+          cuda: '13.1.0'
           linux-local-args: '["--toolkit"]'
 
       # Runs a single command using the runners shell
@@ -34,7 +34,7 @@ jobs:
         run: nvcc -V
         
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v6
       
       - name: Configure cmake
         # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
